syntax = "proto3";

package example.maps;
option go_package = "github.com/olusesa/wyzlab-proto-golan/proto";

message IdWrapper{
  uint32 id =1;
}


message mapExample{
  map<string, IdWrapper> ids = 1;
}